fix(stocks): F1、F2阶段修复